--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@ button:nth-child(20){
 					</div>
 					<div id="output-microphone">
 						<span id="microphone">
+							<img src="https://github.com/abarna-codespot/calculator-with-voice-input/blob/master/mic.png?raw=true" alt="mic.png"/>
 						</span>
 						<span class="tooltip">Operations are plus, minus, multiply, divide &amp; reminder
 						The user input format is number + operation + number<br><br>
